chat messages with users and times formatted and broadcasted

--- a/client/chat.html
+++ b/client/chat.html
@@ -61,7 +61,12 @@
         </form>
       </div>
     </div>
-
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.14.0/qs.min.js"
+      integrity="sha512-6yLIYbXqyvjSDYNO1pgBRjwWPBw66kMOb+sHqrvn457+iJiret0PeHzUlpLKHH0fYzX9bxGtPDqQ84xKrhEYSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- Front end library access of socket.io -->
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <script src="js/main.js"></script>
